[gd_scene load_steps=6 format=3 uid="uid://btg6pnsjf142h"]

[ext_resource type="Script" uid="uid://t04u8cbyhle4" path="res://scenes/menus/pause_menu.gd" id="1_1qkhw"]
[ext_resource type="Theme" uid="uid://cn5xuu2uvf5w3" path="res://assets/themes/theme.tres" id="1_upnrw"]
[ext_resource type="PackedScene" uid="uid://cjqvkbkt7yhvl" path="res://assets/ui_button_sound.tscn" id="3_ui6hq"]
[ext_resource type="AudioStream" uid="uid://ctnc2iu4a0atj" path="res://assets/sounds/LittleSwoosh5.wav" id="4_ptn75"]
[ext_resource type="PackedScene" uid="uid://cbmt0q3frns" path="res://assets/scene_fader.tscn" id="5_03aqk"]

[node name="pauseMenu" type="CanvasLayer"]
process_mode = 2
layer = 2
script = ExtResource("1_1qkhw")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
top_level = true
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_upnrw")

[node name="pauseMenu" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="pause" type="Label" parent="Panel/pauseMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Paused
"
horizontal_alignment = 1

[node name="continue" type="Button" parent="Panel/pauseMenu" groups=["button_ui"]]
layout_mode = 2
text = "Continue"

[node name="main" type="Button" parent="Panel/pauseMenu" groups=["button_ui"]]
layout_mode = 2
text = "Main Menu"

[node name="exit" type="Button" parent="Panel/pauseMenu" groups=["button_ui"]]
layout_mode = 2
text = "Exit game"

[node name="upgradeMenu" type="VBoxContainer" parent="Panel"]
visible = false
layout_mode = 2
offset_top = -10.0
offset_right = 300.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2

[node name="Upgrade" type="Label" parent="Panel/upgradeMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Choose wisely"
horizontal_alignment = 1

[node name="upgradeContainer" type="HBoxContainer" parent="Panel/upgradeMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Opt1" type="Button" parent="Panel/upgradeMenu/upgradeContainer" groups=["button_ui"]]
layout_mode = 2
text = "+1 Row of uranium"

[node name="Opt2" type="Button" parent="Panel/upgradeMenu/upgradeContainer" groups=["button_ui"]]
layout_mode = 2
text = "+ 25 % faster enrichment"

[node name="Opt3" type="Button" parent="Panel/upgradeMenu/upgradeContainer" groups=["button_ui"]]
layout_mode = 2
text = "+ 25 % more delayed neutrons"

[node name="UiButtonSound" parent="." instance=ExtResource("3_ui6hq")]

[node name="fly_in_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ptn75")
bus = &"SFX"

[node name="SceneFader" parent="." instance=ExtResource("5_03aqk")]

[connection signal="pressed" from="Panel/pauseMenu/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/pauseMenu/main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="Panel/pauseMenu/exit" to="." method="_on_exit_pressed"]
